# utt

./: CHANGELOG.md  pyproject.toml
utt/: constants.py  version.txt
utt/components/: activities.py  data_filename.py  entry_parser.py
utt/data_structures/: activity.py  entry.py
utt/plugins/: 1_report_with_tags.py  1_tags.py
utt/report/: common.py  formatter.py
utt/report/activities/: model.py
utt/report/azdo/: wi.py
utt/report/details/: view.py
utt/report/projects/: model.py  view.py
utt/report/sql/: model.py
